# collaborative-editor-c

./: .gitignore  CMakeLists.txt  main  main.c  makefile
app/: client.c  demo_client.c  login_window_design.glade  server  server.c
app/includes/: bindings.h  client.h  common.h  defines.h  login.h  prepares.h  structs.h  text_buffer_handler.h  text_buffer_structs.h  text_handler.h  triggers.h
gtk_examples/getting_started/: getting_started  getting_started.c  makefile
gtk_examples/gui-demo/: CMakeLists.txt  gui.c  server.c
gtk_examples/gui-demo/includes/: bindings.h  client.h  triggers.h
gtk_examples/gui-tries/: center.c  checkmenuitem.c  icon.c  imagemenu.c  linescols.cpp  mnemonic.c  popupmenu.c  simple.c  simplemenu.c  simpletextview.c  submenu.c  toolbar.c  tooltip.c  undoredo.c  version.c  windows.c
